added get route for fetching events
